# DataStructures

./: .gitmodules  CMakeLists.txt  README.md  list.hpp  main.cpp  node.hpp  queue.hpp
MISC/: README.md  dbRead.cs
MISC/Union Find/: CMakeLists.txt  README.md  main.cpp
MISC/Union Find/libraries/: unionfind.cpp  unionfind.hpp
Project 1/: CMakeLists.txt  README.md
Project 1/libraries/: list.cpp  queue.cpp  queue.hpp
Project 1/tests/: enqueue_unit_test.cpp  test2.cpp  test3_2.cpp
Project 2/: CMakeLists.txt  README.md
Project 2/encoded/: bible_char.txt  bible_string.txt  encyclopedia_string.txt
Project 2/inputs/: file1.txt  file2.txt  file3.txt  huff_bible.txt
Project 2/libraries/: huffman.cpp  huffman.hpp  iohelper.hpp  minqueue.cpp  minqueue.hpp  node.cpp  node.hpp  sortvector.cpp  sortvector.hpp  stopwatch.hpp
Project 2/tests/: test1.cpp  test2.cpp
Project 3/: CMakeLists.txt  README.md  readme.md
Project 3/bubble/: CMakeLists.txt  README.md  bubble.hpp  main.cpp.txt
Project 3/heap/: HeapNorm.cpp  HeapNorm.hpp  README.md
Project 3/insertion/: CMakeLists.txt  InsertionSort.cpp  InsertionSort.hpp  README.md
Project 3/libraries/: insertion_sort.cpp  insertion_sort.hpp  merge_sort.hpp  shell_sort.hpp  stopwatch.hpp  utils.hpp
Project 3/matlab/: SpeedCompare.m
Project 3/merge/: README.md  merge.cpp  merge.hpp
Project 3/radix/: CMakeLists.txt  README.md  emersonRadix.hpp
Project 3/tests/: heap.cpp  merge.cpp  radix.cpp  test1.cpp  test1_results.txt  test2.cpp  test3.cpp  test_driver.cpp  validate_sorts.cpp
Project 4/: CMakeLists.txt  README.md
Project 4/cuckoo/: Cuckoo_Hashing.cpp  Cuckoo_Hashing.hpp  README.md  main.cpp
Project 4/double/: HashTable.hpp  README.md  main.cpp
Project 4/libraries/: hash.cpp  prime.hpp  twochoice.cpp  twochoice.hpp
Project 4/matlab/: test1.m
Project 4/quadratic/: README.md  hash.cpp  hash.hpp  main.cpp
Project 4/tests/: driver.cpp
Project 5/: CMakeLists.txt  CMakeLists.txt~
Project 5/libraries/: graph.cpp  graph.hpp  graph.hpp~  int_graph.hpp  int_graph.hpp~  matrix_graph.hpp  minheap.hpp  minheap.hpp~  prim.cpp  prim.cpp~  test.cpp  test.cpp~  weighted_graph.hpp  weighted_graph.hpp~
Project 5/tests/: CMakeCache.txt  Makefile  cmake_install.cmake  driver.cpp  driver.cpp~
libraries/: list.hpp  node.hpp  queue.hpp  stopwatch.hpp
matlab/: test2.m
tests/: enqueue_unit_test.cpp  test1.cpp  test3_1.cpp
